<resources>
    <string name="app_name">Fosha</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="desc_firebase_lockup">desc firebase lockup</string>
    <string name="signed_out">signed out</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="sign_in">Sign In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="title_activity_tabed_">Tabed_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="sign_in_state_key" translatable="false">sign_in_state</string>
    <string name="user_id_key" translatable="false">user_id</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_phone_number">Fosha will send an SMS message to verify your phone number . Enter Your country cod and phone number</string>
    <string name="enter_your_phone_number_hint">Phone Number</string>
    <string name="next">Next</string>
    <string name="verifixcation_code_hint">ــ ــ ــ   ــ ــ ــ</string>
    <string name="waiting_to_automatically_detect_an_sms_sent_to">Waiting to automatically detect an SMS sent to</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="enter_6_digit_code">Enter 6 digit code</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="enter_your_first_name">your profile picture(Optional)</string>
    <string name="enter_your_first_name_hint">Enter your first name</string>
    <string name="enter_your_last_name_hint">Enter your last name</string>
    <string name="verifying_from">Verifying from  %1$s</string>
    <string name="display_price">Price : %1$d $</string>
    <string name="how_much_is_it_awesome">How much is it awesome !</string>
    <string name="lorem">بأية حال، سأرى وجه المريخ، وسوف تكون تجربة استثنائية. أعتقد أن مشاهدة الأجرام السماوية من خلال تلسكوب دقيق يجب أن يكون درساً من دروس التعليم الحر، على غرار التجوّل حول العالم.</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">Top</string>
    <string name="heading_my_posts_price">Price</string>
    <string name="title_activity_scrolling_main">ScrollingMainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name">Name</string>
    <string name="upload_images">upload images</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="post">Post</string>
    <string name="extra">المزيد</string>


</resources>
