<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarOfLoginActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEnterPhoneNumber"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_1"
            android:text="@string/enter_your_phone_number"
            android:fontFamily="sans-serif"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_2"
            android:layout_marginTop="@dimen/margin_2"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                app:ccp_countryPreference="eg,us"
                app:ccp_defaultNameCode="eg" />

            <EditText
                android:id="@+id/editText_carrierNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:hint="@string/enter_your_phone_number_hint"
                android:inputType="phone"
                android:singleLine="true"
                android:layout_marginStart="@dimen/margin_1"
                />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStartSendVerificationCode"
            android:text="@string/next"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textColor="@color/ef_white"
            android:fontFamily="sans-serif-medium"
            style="@style/Widget.AppCompat.Button.Colored"


            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutVerification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/txtVerifyFromNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            tools:text="Verifying from +20 11234567" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            android:paddingStart="@dimen/margin_1"
            android:paddingEnd="@dimen/margin_1"
            android:paddingBottom="@dimen/margin_1"
            android:textAlignment="center"
            android:background="@drawable/rounded_corner_txtviews"
            android:textSize="16sp"

            android:text="@string/waiting_to_automatically_detect_an_sms_sent_to" />

        <TextView
            android:id="@+id/tvNumberToBeShown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:text="+20 51234555" />

        <TextView
            android:id="@+id/tv_lable_wrong_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:paddingStart="@dimen/margin_1"
            android:paddingEnd="@dimen/margin_1"
            android:paddingTop="@dimen/margin_1"
            android:paddingBottom="@dimen/margin_1"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/wrong_number" />

        <EditText
            android:id="@+id/et_6DigitCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:hint="@string/verifixcation_code_hint"
            android:inputType="number"
            android:lines="1"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#7A7A7A"
            android:textSize="20sp"
            android:theme="@style/MyMaterialTheme"
            tools:text="123456"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_6_digit_code"
            android:layout_marginTop="@dimen/margin_1"
            />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E3E4E4"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"

            />

        <LinearLayout
            android:id="@+id/btnResendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/margin_2"
            android:paddingEnd="@dimen/margin_1"
            android:paddingTop="@dimen/margin_1"
            android:paddingBottom="@dimen/margin_1"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/resend_sms"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_1"
                android:layout_marginEnd="@dimen/margin_1"
                app:srcCompat="@drawable/ic_sms" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNextVerification"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:text="@string/next"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/ef_white"
            android:fontFamily="sans-serif-medium"
            style="@style/Widget.AppCompat.Button.Colored"


            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutGetNameAndProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:visibility="visible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_2"
            >

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_height="70dp"
                    android:layout_width="70dp"
                    app:srcCompat="@drawable/ic_person"
                    android:background="@drawable/round_shap_image_view"
                    android:layout_gravity="center"
                    android:contentDescription="@string/ef_content_desc_image">
                </ImageView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textSize="15sp"
                android:text="@string/enter_your_first_name"
                android:layout_gravity="center"
                />

        </LinearLayout>
        <EditText
            android:id="@+id/ed_F_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_your_first_name_hint"
            android:inputType="textPersonName"
            android:nextFocusForward="@id/ed_l_name"
            android:nextFocusDown="@id/ed_l_name"

            />

        <EditText
            android:id="@+id/ed_l_name"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:hint="@string/enter_your_last_name_hint"
            android:nextFocusDown="@id/btnGetName"
            android:nextFocusForward="@id/btnGetName"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:elevation="10dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:id="@+id/btnGetName"
            app:cardCornerRadius="25dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:layout_gravity="center"
            android:background="@drawable/element_background_elevation"
            android:layout_marginTop="19dp"
            android:thicknessRatio="1.9"
            app:cardBackgroundColor="@color/colorPrimaryLight">
            <ImageView
                android:layout_height="30dp"
                android:layout_width="match_parent"
                app:srcCompat="@drawable/ic_arrow_forward"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true">
            </ImageView>
            </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>