<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".AddNewPlaceActivity"
    android:weightSum="4"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_1"
        android:paddingTop="@dimen/margin_1"
        android:paddingRight="@dimen/margin_1"
        android:paddingBottom="@dimen/margin_1"
        android:layout_weight="2">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="3dp"
                    android:hint="@string/how_much_is_it_awesome"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nextFocusForward="@id/edit_text_place_price"
                        android:nextFocusDown="@id/edit_text_place_price"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </ScrollView>


        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_1"
        android:layout_marginStart="@dimen/margin_1"
        android:background="@color/light_gray"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:orientation="vertical"
                >


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_text_place_price"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginTop="@dimen/margin_1"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:maxLength="12"
                    android:maxLines="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/rounded_corner_txtviews"
                        android:padding="4dp"
                        android:nextFocusDown="@id/edit_text_place_address"
                        android:nextFocusForward="@id/edit_text_place_address"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_text_place_address"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:hint="@string/address"
                    android:maxLength="200"
                    android:maxLines="3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_txtviews"
                        android:padding="4dp"
                        android:nextFocusForward="@id/edit_text_place_name"
                        android:nextFocusDown="@id/edit_text_place_name"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_text_place_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margin_1"
                    android:layout_marginEnd="@dimen/margin_1"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:hint="@string/name"
                    android:maxLength="100"
                    android:maxLines="3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_txtviews"
                        android:padding="4dp"
                        android:nextFocusDown="@id/buttonCamera"
                        android:nextFocusForward="@id/buttonCamera"
                        />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight=".5"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnUpload"
                    android:layout_width="60dp"
                    android:layout_height="52dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fab_add_new_places"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/buttonCamera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill"
                        android:padding="4dp"
                        app:srcCompat="@drawable/ic_photo_library"
                        android:contentDescription="@string/upload_images"
                        android:nextFocusForward="@id/fab_add_new_places"
                        android:nextFocusRight="@id/fab_add_new_places"
                        android:nextFocusLeft="@id/fab_add_new_places"
                        />
                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_new_places"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"

                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/margin_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.492"
                    app:srcCompat="@drawable/ic_send_black_24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>